--- a/utdemo/pom.xml
+++ b/utdemo/pom.xml
@@ -41,8 +41,14 @@
     <artifactId>testng</artifactId>
     <version>6.9.10</version>
     <scope>test</scope>
+    
+    
 </dependency>
-		
+
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
